# CPP23Tutorials

./: CMakeLists.txt  vcpkg.json
CPP23.Core/: CMakeLists.txt  debugger_trace_impl.hpp
CPP23.Tests/: CMakeLists.txt  formatting.tests.cpp  move.tests.cpp  pimpl.tests.cpp
