cmake_minimum_required (VERSION 3.21)

include(utility.cmake)
project ("CPP23")

############################################################################
#                            PACKAGES
############################################################################
find_package(Catch2 CONFIG REQUIRED)
find_package(concurrencpp CONFIG REQUIRED)
find_package(Eigen3 CONFIG REQUIRED)
find_package(function2 CONFIG REQUIRED)

message("======================================================================================")
message("======================================================================================")
message("========================           START           ===================================")
message("======================================================================================")
message("======================================================================================")

############################################################################
#                        GLOBAL VARIABLES
############################################################################


configure_default_output_directories()

# HACK
if (MSVC)
    # https://stackoverflow.com/questions/58708772/cmake-project-in-visual-studio-gives-flag-override-warnings-command-line-warnin
    string(REGEX REPLACE "/W[3|4]" "/w" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}") 
endif()

############################################################################
#                             SUBDIRECTORIES
############################################################################
add_subdirectory (CPP23.Core)
add_subdirectory (CPP23.Tests)


message("======================================================================================")
message("======================================================================================")
message("========================            END            ===================================")
message("======================================================================================")
message("======================================================================================")









